🌓🎅 Checkpoint ./public/index.html:27683896/100 ./public/script.js:27683896/421

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
       Chapter 3
       Hands-on Project 3-3
 
-      Author: 
-      Date:   
+      Author: Guillermo Molina Matus
+      Date:   February 22, 2021
 
       Filename: index.htm
    -->
@@ -36,6 +36,6 @@
           </ul>
       </div>
    </article>
-  
+  <script src="script.js"></script>
   </body>
 </html>
